--- a/Project.Lottery.Webforms/Project.Lottery.Webforms.csproj
+++ b/Project.Lottery.Webforms/Project.Lottery.Webforms.csproj
@@ -66,6 +66,11 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Themes\Main\Images\gopher5Logo.png" />
+    <Content Include="App_Themes\Main\Images\lottery-banner.jpg" />
+    <Content Include="App_Themes\Main\Images\megaMillionsLogo.png" />
+    <Content Include="App_Themes\Main\Images\northstarLogo.png" />
+    <Content Include="App_Themes\Main\Images\powerballLogo.png" />
     <Content Include="packages.config" />
     <Content Include="MasterPages\BaseSkin.Master" />
     <Content Include="App_Themes\Main\Main.less" />
@@ -89,6 +94,9 @@
     </Content>
     <Content Include="Global.asax" />
     <Content Include="Index.aspx" />
+    <Content Include="UserControls\ContentBodyNavControl.ascx" />
+    <Content Include="UserControls\HeaderControl.ascx" />
+    <Content Include="UserControls\LeftNavigationControl.ascx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -110,12 +118,32 @@
       <DependentUpon>BaseSkin.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControls\ContentBodyNavControl.ascx.cs">
+      <DependentUpon>ContentBodyNavControl.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UserControls\ContentBodyNavControl.ascx.designer.cs">
+      <DependentUpon>ContentBodyNavControl.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\HeaderControl.ascx.cs">
+      <DependentUpon>HeaderControl.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UserControls\HeaderControl.ascx.designer.cs">
+      <DependentUpon>HeaderControl.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\LeftNavigationControl.ascx.cs">
+      <DependentUpon>LeftNavigationControl.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UserControls\LeftNavigationControl.ascx.designer.cs">
+      <DependentUpon>LeftNavigationControl.ascx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Admin\" />
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="UserControls\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
