--- a/Project.Lottery.Webforms/Web.config
+++ b/Project.Lottery.Webforms/Web.config
@@ -4,10 +4,21 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  
+  <appSettings>
+    <add key="ConnectionStringName" value="LotteryFinalWebApp"/>  
+  </appSettings>
+
+  <connectionStrings>
+    <add name="LotteryFinalWebApp" connectionString="Data Source=PHOU-LAPTOP\SQLEXPRESS; Initial Catalog=LotteryFinal; user id=LotteryFinalWebUser; password=password" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
+  
+  
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
@@ -18,4 +29,6 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  
+  
 </configuration>
