--- a/Project.Lottery.Models/Project.Lottery.Models.csproj
+++ b/Project.Lottery.Models/Project.Lottery.Models.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Enums\BallQuantityEnum.cs" />
     <Compile Include="Enums\BallTypeEnum.cs" />
     <Compile Include="Enums\CostToPlayEnum.cs" />
+    <Compile Include="Enums\LeftNavPageOptionEnum.cs" />
     <Compile Include="Enums\QueryExecuteType.cs" />
     <Compile Include="Enums\QuerySelectType.cs" />
     <Compile Include="Exceptions\CustomExceptions.cs" />
