--- a/Project.Lottery.Webforms/Project.Lottery.Webforms.csproj
+++ b/Project.Lottery.Webforms/Project.Lottery.Webforms.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Admin\DrawingManage.aspx" />
     <Content Include="Admin\GameManage.aspx" />
     <Content Include="App_Themes\Main\Images\gopher5Logo.png" />
     <Content Include="App_Themes\Main\Images\lottery-banner.jpg" />
@@ -103,6 +104,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin\DrawingManage.aspx.cs">
+      <DependentUpon>DrawingManage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\DrawingManage.aspx.designer.cs">
+      <DependentUpon>DrawingManage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Admin\GameManage.aspx.cs">
       <DependentUpon>GameManage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
