--- a/Project.Lottery.BLL/Project.Lottery.BLL.csproj
+++ b/Project.Lottery.BLL/Project.Lottery.BLL.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CostBLL.cs" />
     <Compile Include="GameOddBLL.cs" />
     <Compile Include="InstructionBLL.cs" />
+    <Compile Include="LocationBLL.cs" />
     <Compile Include="LotteryDetailBLL.cs" />
     <Compile Include="LotteryDrawingBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
