--- a/Project.Lottery.Services/Project.Lottery.Services.csproj
+++ b/Project.Lottery.Services/Project.Lottery.Services.csproj
@@ -48,6 +48,15 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data.Services" />
+    <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Activation" />
+    <Reference Include="System.ServiceModel.Routing" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -57,6 +66,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -75,10 +85,42 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataContracts\IBallTypeDTO.cs" />
+    <Compile Include="DataContracts\ICostDTO.cs" />
+    <Compile Include="DataContracts\IGameOddDTO.cs" />
+    <Compile Include="DataContracts\IInstructionDTO.cs" />
+    <Compile Include="DataContracts\ILocationDTO.cs" />
+    <Compile Include="DataContracts\ILotteryDrawingDTO.cs" />
+    <Compile Include="DataContracts\IWinningNumberDTO.cs" />
+    <Compile Include="DataContracts\Collections\ServiceCollection.cs" />
+    <Compile Include="DataContracts\LotteryDetailDTO.cs" />
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="REST\LotteryDetailService.cs" />
+    <Compile Include="ServiceContracts\ILotteryDetailService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Faults\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Project.Lottery.BLL\Project.Lottery.BLL.csproj">
+      <Project>{feffdf6f-24f5-4bae-95ae-423740ae1414}</Project>
+      <Name>Project.Lottery.BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Project.Lottery.Common\Project.Lottery.Common.csproj">
+      <Project>{47c999ad-dd30-4371-bf7d-7b6e2f15209d}</Project>
+      <Name>Project.Lottery.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Project.Lottery.Models\Project.Lottery.Models.csproj">
+      <Project>{d6783741-f8d8-44a1-99b9-edc11f97352b}</Project>
+      <Name>Project.Lottery.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
