--- a/Project.Lottery.Services/Web.config
+++ b/Project.Lottery.Services/Web.config
@@ -1,21 +1,68 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
+
+
 <configuration>
+
+  <appSettings>
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="ConnectionStringName" value="LotteryWebApp" />
+  </appSettings>
+
+  <connectionStrings>
+    <add name="LotteryWebApp" connectionString="Data Source=PHOU-LAPTOP\SQLEXPRESS; Initial Catalog=LotteryFinal; user id=LotteryFinalWebUser; password=password" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
-    </compilers>
-  </system.codedom>
+
+  <system.serviceModel>
+
+    <behaviors>
+
+      <serviceBehaviors>
+        <behavior name="LotteryDetailService">
+          <serviceMetadata httpGetEnabled="false" httpsGetEnabled="false"/>
+          <serviceDebug includeExceptionDetailInFaults="false"/>
+        </behavior>
+      </serviceBehaviors>
+
+      <endpointBehaviors>
+        <!-- JSON -->
+        <behavior name="LotteryDetailServiceBehavior">
+          <webHttp helpEnabled="True" defaultOutgoingResponseFormat="Json" />
+        </behavior>
+      </endpointBehaviors>
+
+    </behaviors>
+
+    <protocolMapping>
+      <add binding="basicHttpsBinding" scheme="https" />
+    </protocolMapping>
+
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+
+    <services>
+      <service name="Project.Lottery.Services.REST.LotteryDetailService" >
+        <endpoint address=""
+                  behaviorConfiguration="LotteryDetailServiceBehavior"
+                  binding="webHttpBinding"
+                  contract="Project.Lottery.Services.ServiceContracts.ILotteryDetailService" />
+      </service>
+    </services>
+
+    <standardEndpoints>
+      <webHttpEndpoint>
+        <standardEndpoint name="" helpEnabled="true" automaticFormatSelectionEnabled="false"></standardEndpoint>
+      </webHttpEndpoint>
+    </standardEndpoints>
+
+  </system.serviceModel>
+
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true"> </modules>
+    <directoryBrowse enabled="true"/>
+  </system.webServer>
+
 </configuration>
