--- a/Project.Lottery.Webforms/Project.Lottery.Webforms.csproj
+++ b/Project.Lottery.Webforms/Project.Lottery.Webforms.csproj
@@ -149,6 +149,7 @@
     <Compile Include="MasterPages\BaseSkin.Master.designer.cs">
       <DependentUpon>BaseSkin.Master</DependentUpon>
     </Compile>
+    <Compile Include="Models\LotteryDetailDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControls\ContentBodyNavControl.ascx.cs">
       <DependentUpon>ContentBodyNavControl.ascx</DependentUpon>
@@ -174,7 +175,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Project.Lottery.BLL\Project.Lottery.BLL.csproj">
