Add BallType REST Service; Add All GET Service Calls;

--- a/Project.Lottery.Services/Web.config
+++ b/Project.Lottery.Services/Web.config
@@ -26,11 +26,18 @@
           <serviceMetadata httpGetEnabled="false" httpsGetEnabled="false"/>
           <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
+        <behavior name="BallTypeService">
+          <serviceMetadata httpGetEnabled="false" httpsGetEnabled="false"/>
+          <serviceDebug includeExceptionDetailInFaults="false"/>
+        </behavior>
       </serviceBehaviors>
 
       <endpointBehaviors>
         <!-- JSON -->
         <behavior name="LotteryDetailServiceBehavior">
+          <webHttp helpEnabled="True" defaultOutgoingResponseFormat="Json" />
+        </behavior>
+        <behavior name="BallTypeServiceBehavior">
           <webHttp helpEnabled="True" defaultOutgoingResponseFormat="Json" />
         </behavior>
       </endpointBehaviors>
@@ -49,6 +56,12 @@
                   behaviorConfiguration="LotteryDetailServiceBehavior"
                   binding="webHttpBinding"
                   contract="Project.Lottery.Services.ServiceContracts.ILotteryDetailService" />
+      </service>
+      <service name="Project.Lottery.Services.REST.BallTypeService" >
+        <endpoint address=""
+                  behaviorConfiguration="BallTypeServiceBehavior"
+                  binding="webHttpBinding"
+                  contract="Project.Lottery.Services.ServiceContracts.IBallTypeService" />
       </service>
     </services>
 
