--- a/Project.Lottery.Services/Project.Lottery.Services.csproj
+++ b/Project.Lottery.Services/Project.Lottery.Services.csproj
@@ -89,6 +89,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataContracts\BallTypeDTO.cs" />
     <Compile Include="DataContracts\IBallTypeDTO.cs" />
     <Compile Include="DataContracts\ICostDTO.cs" />
     <Compile Include="DataContracts\IGameOddDTO.cs" />
@@ -102,7 +103,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="REST\BallTypeService.cs" />
     <Compile Include="REST\LotteryDetailService.cs" />
+    <Compile Include="ServiceContracts\IBallTypeService.cs" />
     <Compile Include="ServiceContracts\ILotteryDetailService.cs" />
   </ItemGroup>
   <ItemGroup>
