Test Service PUT checkpoint: Changed all DrawDate instances to DrawDates; Attempt to correct inability to Save Object through REST service.

--- a/Project.Lottery.Services/Web.config
+++ b/Project.Lottery.Services/Web.config
@@ -23,11 +23,11 @@
 
       <serviceBehaviors>
         <behavior name="LotteryDetailService">
-          <serviceMetadata httpGetEnabled="false" httpsGetEnabled="false"/>
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
           <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
         <behavior name="BallTypeService">
-          <serviceMetadata httpGetEnabled="false" httpsGetEnabled="false"/>
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
           <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
       </serviceBehaviors>
@@ -35,10 +35,10 @@
       <endpointBehaviors>
         <!-- JSON -->
         <behavior name="LotteryDetailServiceBehavior">
-          <webHttp helpEnabled="True" defaultOutgoingResponseFormat="Json" />
+          <webHttp helpEnabled="True" defaultOutgoingResponseFormat="Json" automaticFormatSelectionEnabled="false" />
         </behavior>
         <behavior name="BallTypeServiceBehavior">
-          <webHttp helpEnabled="True" defaultOutgoingResponseFormat="Json" />
+          <webHttp helpEnabled="True" defaultOutgoingResponseFormat="Json" automaticFormatSelectionEnabled="false" />
         </behavior>
       </endpointBehaviors>
 
