--- a/Project.Lottery.Webforms/Project.Lottery.Webforms.csproj
+++ b/Project.Lottery.Webforms/Project.Lottery.Webforms.csproj
@@ -152,6 +152,9 @@
     <Compile Include="Admin\WinningNumberManage.aspx.designer.cs">
       <DependentUpon>WinningNumberManage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Delegates\UCDropDownDelegate.cs" />
+    <Compile Include="Enums\IdType.cs" />
+    <Compile Include="Extensions\Extension.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -204,8 +207,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Delegates\" />
-    <Folder Include="Extensions\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Project.Lottery.BLL\Project.Lottery.BLL.csproj">
