--- a/Project.Lottery.Webforms/Project.Lottery.Webforms.csproj
+++ b/Project.Lottery.Webforms/Project.Lottery.Webforms.csproj
@@ -154,6 +154,7 @@
     </Compile>
     <Compile Include="Delegates\UCDropDownDelegate.cs" />
     <Compile Include="Enums\IdType.cs" />
+    <Compile Include="Enums\UrlEnum.cs" />
     <Compile Include="Extensions\Extension.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
